force-app/main/default/objects/Magnati__mdt/Magnati__mdt.object-meta.xml
<CustomObject>
    <label>Magnati</label>
    <pluralLabel>Magnatis</pluralLabel>
</CustomObject>