force-app/main/default/objects/Magnati__mdt/fields/Merchant_Descriptor__c.field-meta.xml
<CustomField>
    <fullName>Merchant_Descriptor__c</fullName>
    <label>Merchant Descriptor</label>
    <length>23</length>
    <type>Text</type>
</CustomField>