force-app/main/default/objects/Magnati__mdt/fields/Siniya_Transaction_Descriptor__c.field-meta.xml
<CustomField>
    <fullName>Siniya_Transaction_Descriptor__c</fullName>
    <label>Siniya Transaction Descriptor</label>
    <length>23</length>
    <type>Text</type>
</CustomField>