force-app/main/default/objects/Magnati__mdt/fields/Store__c.field-meta.xml
<CustomField>
    <fullName>Store__c</fullName>
    <label>Store</label>
    <length>255</length>
    <type>Text</type>
</CustomField>