force-app/main/default/objects/Magnati__mdt/fields/TransactionHint__c.field-meta.xml
<CustomField>
    <fullName>TransactionHint__c</fullName>
    <label>TransactionHint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>